# mtg_brawlpioneer

./: LICENSE  README.md  announcement_history.html  pyproject.toml
.github/workflows/: push_workflow.yml  update_banlist.yml  validate_code.yml
docs/: announcement_history.html  current_banlist.json  decklist_validator.html
mtgbp_banlists/: __init__.py  __main__.py
mtgbp_banlists/banlists/: 2020-11-20.json  2022-04-13.json  2022-09-05.json  2023-10-28.json  2024-03-20.json  2025-01-20.json  2025-03-30.json
mtgbp_banlists/static/: footer.html  footer_history.html  header.html  header_history.html  page_validator.html
