[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mtg-brawlpioneer"
dynamic = ["version"]
authors = [
    { name = "Martin Cuchet", email = "martin.cuchet@gmail.com" },
    { name = "Anaël Yahi", email = "anael.yahi@gmail.com" },
]
description = "Validation tool for custom format: Brawl Pioneer."
keywords = ["mtg", "Magic: the Gathering", "CCG", "Brawl", "Pioneer", "BP", "MTGBP"]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "ruff",
    "zest.releaser[recommended]",
]

[tool.setuptools.packages.find]
include = ["mtgbp_banlists*"]

# required for dynamic version
[tool.setuptools_scm]

[tool.zest-releaser]
create-wheel = true
